add virtual asssistant

--- a/PollingStation/PollingStationApp/Components/App.razor
+++ b/PollingStation/PollingStationApp/Components/App.razor
@@ -19,6 +19,13 @@
     <CircuitProps />
     <Routes />
     <script src="_framework/blazor.web.js"></script>
+    <script>
+        window.scrollToBottom = (element) => {
+          if (element) {
+            element.scrollTop = element.scrollHeight;
+          }
+        }
+    </script>
 </body>
 
 </html>
