--- a/PollingStation/PollingStationApp/Components/Layout/MainLayout.razor
+++ b/PollingStation/PollingStationApp/Components/Layout/MainLayout.razor
@@ -27,6 +27,7 @@
         <article class="page-content">
             @Body
         </article>
+        <PollingStationApp.Components.Shared.ChatWidget></PollingStationApp.Components.Shared.ChatWidget>
     </main>
 </div>
 
