--- a/PollingStation/PollingStationApp/Components/Layout/NavMenu.razor
+++ b/PollingStation/PollingStationApp/Components/Layout/NavMenu.razor
@@ -33,12 +33,12 @@
             </div>
         }
         <div class="nav-item px-3">
-            <span class="text-muted">Cum se folosește aplicația?</span>
+            <span class="text-muted">Vizualizează rezultatele</span>
         </div>
         <div class="nav-item px-3">
-            <NavLink class="nav-link" href="weather">
+            <NavLink class="nav-link" href="results">
                 <i class="polling-station-icon navmenu-icon fa-solid fa-cloud"></i>
-                <span class="title">Tutorial</span>
+                <span class="title">Rezultate</span>
             </NavLink>
         </div>
     </nav>
