--- a/PollingStation/PollingStationApp/wwwroot/app.css
+++ b/PollingStation/PollingStationApp/wwwroot/app.css
@@ -35,6 +35,12 @@
     --dark: #192039;
 }
 
+* {
+    -webkit-user-select: none; /* Safari */
+    -moz-user-select: none; /* Firefox */
+    -ms-user-select: none; /* Internet Explorer/Edge */
+    user-select: none; /* Standard syntax */
+}
 
 html, body {
     background-color: var(--dark-color);
@@ -42,6 +48,9 @@ html, body {
     font-family: Inter,-apple-system,BlinkMacSystemFont,Segoe UI,Roboto,Helvetica Neue,Arial,sans-serif transition: background-color 0.3s ease, color 0.3s ease; /* Smooth transition */
 }
 
+.nav-link {
+    padding: .5rem 1rem;
+}
 .text-muted {
     color: var(--light-color) !important;
 }
