--- a/PollingStation/PollingStationApp/Components/Pages/TokenDemo.razor
+++ b/PollingStation/PollingStationApp/Components/Pages/TokenDemo.razor
@@ -6,7 +6,7 @@
 @rendermode InteractiveServer
 <h3>TokenDemo</h3>
 
-<p><em>@token</em></p>
+<p><em style="user-select:all">@token</em></p>
 
 @code {
     public string token;
